# kaggle_s6_e1

./: .gitignore  README.md  pyproject.toml
.agent/rules/: jupyter.md
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
docs/: evaluation_guide.md  preprocessing_guide.md  training_guide.md
notebooks/: 01_data_exploration.ipynb  kaggle_submission.ipynb  kaggle_submission.py
outputs/metrics/: training_metrics.json  training_metrics.xlsx
outputs/models/: xgboost_fitted_objects.joblib
src/evaluate/: __init__.py  evaluate.py
src/train/: train.py
src/utils/: config.py  preprocess.py
